# Artisan

./: .env.example  .gitignore  README.md  README.zh-CN.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
agent/: app.py  config.py  lifespan.py  main.py  prompts.py  pyproject.toml  state.py
agent/graph/: __init__.py  _context.py  _tools.py  builder.py  nodes.py
agent/models/: __init__.py  deepseek.py  llm.py  sanitize.py
agent/routers/: __init__.py  chat.py  health.py  knowledge.py  sessions.py  skills.py  terminal.py  workspace.py
agent/sandbox/: __init__.py  _constants.py  _exec.py  _file_ops.py  _lifecycle.py  _protocols.py  _skills.py  _types.py  daytona_client.py  daytona_exec_patch.py  sandbox_pool.py
agent/schemas/: __init__.py  chat.py  knowledge.py  sessions.py  skills.py  system.py  workspace.py
agent/services/chat/: __init__.py  history_service.py  run_manager.py  stream_service.py  utils.py
agent/services/knowledge/: __init__.py  chunking.py  embeddings.py  indexing.py  retrieval.py
agent/services/sessions/: __init__.py  manager.py
agent/services/skills/: __init__.py  manager.py
agent/services/terminal/: __init__.py  proxy.py
agent/services/workspace/: __init__.py  file_ops.py
agent/skills/: core_skills.yaml
agent/tests/: test_chat_schemas.py  test_chat_worker_state.py  test_graph_helpers.py  test_knowledge_embeddings.py  test_lifespan_embedding.py  test_request_normalization.py  test_router_error_contracts.py  test_terminal_proxy.py
agent/tools/: __init__.py  _runtime.py  _types.py
agent/tools/file_tools/: __init__.py  _common.py  editing.py  listing.py  read_write.py  search.py
agent/tools/frontend_tools/: __init__.py  prompts.py
agent/utils/: db.py  runtime.py  skills.py
(+166 files in other folders)
